# EnvironmentMonitor_AzureSphere

./: .gitignore  LICENSE  README.md  launch.vs.json
EnvironmentMonitor_HighLevelApp/: EnvironmentMonitor_HighLevelApp.sln  EnvironmentMonitor_HighLevelApp.vcxproj  EnvironmentMonitor_HighLevelApp.vcxproj.filters  app_manifest.json  bme680_integration.c  build_options.h  connection_strings.h  device_twin.c  i2c.c  i2c.h  main.c  parson.c  sensors.h
EnvironmentMonitor_HighLevelApp/libraries/BSEC/: README.md
HighLevelCore/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  bme680_integration.c  bme680_integration.h  build_options.h  device_twin.c  i2c.c  i2c.h  launch.vs.json  main.c  sensors.h
HighLevelCore/drivers/BME680/: CMakeLists.txt
IntercoreCommsADC_RTApp_MT3620_BMetal/: CMakeLists.txt  main.c  mt3620-timer-poll.c
RealTimeCore/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  main.c  mt3620-timer-poll.c  mt3620-timer-poll.h
